# Github-Trending-API

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  SECURITY.md  dev-requirements.txt  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: actions.yaml  continuous_integration.yaml  integration.yaml  release_and_deploy.yaml
app/: __init__.py  allowed_parameters.py  dev_html_to_json.py  main.py  schemas.py  scrape_allowed_languages.py  scraper.py  scraping.py
data/: dev_html_to_json.py  devdata1.html  devdata1.json  devdata2.html  devdata2.json  devdata3.html  devdata3.json  repo_html_to_json.py  repodata1.html  repodata1.json  repodata2.html  repodata2.json  repodata3.html  repodata3.json  repodata4.html  repodata4.json  schemas.py  scrape_allowed_languages.py
src/: allowed_parameters.py  condensed.py  main.py  schemas.py  scrape_allowed_languages.py  scraper.py
tests/: main_test.py  many_requests.py  requests_benchmark.py  scraper_test.py  test_main.py  test_scraper.py
