[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"

[project]
name = "github-trending-api"
version = "1.0.2"
description = "API providing data about trending repositories/developers on GitHub"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Niklas Tiede", email = "niklastiede2@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "aiohttp>=3.13.5",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "lxml>=6.1.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "mypy==1.20.2",
    "pre-commit==4.6.0",
    "pytest==9.0.3",
    "pytest-cov==7.0.0",
    "ruff==0.15.12",
]

[project.urls]
Homepage = "https://github.com/NiklasTiede/Github-Trending-API"
Repository = "https://github.com/NiklasTiede/Github-Trending-API"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = ["data"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
check_untyped_defs = true
disallow_any_expr = false
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "testing.*",
    "tests.*",
]
disallow_untyped_defs = false
