[metadata]
name = github-trending-api
version = 1.0.0
author = Niklas Tiede
author_email = niklastiede2@gmail.com
description = API providing data about trending repositories/developers on Github
long_description_content_type = text/markdown
url = https://github.com/NiklasTiede/Github-Trending-API
license = MIT
platforms = linux
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9

[options]
package_dir = =app
packages = find:
install_requires =
    beautifulsoup4
    aiohttp
    fastapi
    uvicorn
python_requires = >=3.9

[options.packages.find]
where = app

[options.extras_require]
dev =
    pytest
    mypy
    isort
    black
