[metadata]
name = github_trending_api
version = 1.0.2
description = API providing data about trending repositories/developers on Github
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NiklasTiede/Github-Trending-API
author = Niklas Tiede
author_email = niklastiede2@gmail.com
license = MIT
license_file = LICENSE
platforms = linux
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    aiohttp
    beautifulsoup4
    fastapi
    uvicorn
python_requires = >=3.9
package_dir = =app

[options.packages.find]
where = app

[options.extras_require]
dev =
    mypy
    pytest

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_any_expr = false
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
